Updated tagline to include Watching and Spending

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <p style="font-size: 0.8rem;">The 204-Country Charity List and Wallet Tracking are being integrated. Check back soon!</p>
     </div>
 
-    <p>EMPOWERING COMMUNITIES • CREATING WEALTH</p>
+    <p>EMPOWERING COMMUNITIES • CREATING WEALTH WHILE WATCHING and SPENDING MONEY</p>
 </body>
 </html>
